Fix gap

--- a/frontend/src/pages/mainpage/Mainpage_section7/mainpage_section7.css
+++ b/frontend/src/pages/mainpage/Mainpage_section7/mainpage_section7.css
@@ -1,5 +1,5 @@
 .section7 {
-    margin-bottom: 150px !important;
+    padding-bottom: 150px !important;
 }
 
 .ant-row {
